--- a/estilos/style.css
+++ b/estilos/style.css
@@ -1,6 +1,6 @@
 *{
     font-family: Arial, Helvetica, sans-serif;
-    font-size: 16px;
+    font-size: 17px;
 }
 
 body {
@@ -13,4 +13,12 @@ main {
     margin: auto;
     padding: 10px;
     box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.473);
+}
+
+h1 {
+    color: rgb(134, 14, 14);
+}
+
+h2 {
+    color: rgb(179, 24, 24);
 }
