--- a/estilos/style.css
+++ b/estilos/style.css
@@ -16,9 +16,34 @@ main {
 }
 
 h1 {
-    color: rgb(134, 14, 14);
+    font-size: x-large;
+    color: rgb(188, 16, 16);
+    font-weight: bolder;
 }
 
 h2 {
-    color: rgb(179, 24, 24);
+    font-size: large;
+    color: rgb(170, 26, 26);
+    font-weight: bolder;
+}
+
+img.lado {
+    float: right;
+}
+
+a {
+    font-size: 15px;
+    text-decoration: underline;
+    font-weight: bold;
+    color: rgb(31, 60, 177);
+}
+
+a:hover {
+    text-decoration: underline;
+    color: rgb(250, 5, 5);
+}
+
+abbr {
+    color: rgb(159, 20, 20);
+    font-weight: bold;
 }
